添加任务聊天视图

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor">@color/ink</item>
+        <item name="android:statusBarColor">#007aff</item>
     </style>
     <style name="AppThemeColorfulHint.NoActionBar">
         <item name="windowActionBar">false</item>
